doc/Dockerfile: add support to use the calling user's uid+gid instead of having directories+files owned by 'root'

--- a/doc/Dockerfile
+++ b/doc/Dockerfile
@@ -20,5 +20,13 @@ RUN wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | a
 
 RUN apt-get clean
 
-CMD ant gen-doc \
+# Do some trickery to run ant using a UID/GID passed in via USE_UID+USE_GID environment variables at runtime.
+# There might be easier ways to do it, but the mechanisms provided by Dockerfile + docker-compose are pretty limited.
+CMD if [ "x$USE_UID" != "x" ] ; then \
+        groupadd --gid $USE_GID work_user ; \
+        useradd --create-home --home-dir /usr/src/code/doc/build/docker-home --gid $USE_GID --uid $USE_UID work_user ; \
+        su --preserve-environment work_user /bin/sh -c "cd /usr/src/code ; ant gen-doc" ; \
+    else \
+        ant gen-doc ; \
+    fi \
     && echo "The locally built documentation can be found here:\n\n    build/html/index.html\n\n"
