--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -11,8 +11,8 @@ default_env_vars: &default_env_vars
     CASS_DRIVER_NO_CYTHON: true
     #Skip all syncing to disk to avoid performance issues in flaky CI environments
     CASSANDRA_SKIP_SYNC: true
-    DTEST_REPO: git://github.com/apache/cassandra-dtest.git
-    DTEST_BRANCH: master
+    DTEST_REPO: git://github.com/snazy/cassandra-dtest.git
+    DTEST_BRANCH: CDB-32-auth-improvements
     CCM_MAX_HEAP_SIZE: 1024M
     CCM_HEAP_NEWSIZE: 256M
 
