Use Docker image for dtests in CircleCI w/ JAVA8_HOME environment variable & Allow different pip-source-install repos in requirements.txt
Related changes in cassandra-dtests + ccm fix more issues w/ upgraded-dtests

Patch by Robert Stupp; reviewed by Eduard Tudenhöfner for CASSANDRA-15835

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   j8_jvm_upgrade_dtests:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -93,7 +93,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_cqlsh-dtests-py2-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -114,7 +114,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -170,7 +170,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j11_unit_tests:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -262,7 +262,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j8_cqlsh-dtests-py38-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -283,7 +283,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -339,7 +339,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j11_cqlsh-dtests-py3-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -360,7 +360,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -417,7 +417,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j11_cqlsh-dtests-py3-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -438,7 +438,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -495,7 +495,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j11_cqlsh-dtests-py38-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -516,7 +516,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -573,7 +573,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j8_cqlsh-dtests-py3-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -594,7 +594,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -650,7 +650,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_cqlsh-dtests-py2-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -671,7 +671,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -727,7 +727,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j11_cqlsh-dtests-py2-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -748,7 +748,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -805,7 +805,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j11_dtests-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -848,7 +848,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -886,7 +886,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j8_dtests-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -907,7 +907,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -944,7 +944,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_upgradetests-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -965,7 +965,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1043,7 +1043,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   utests_stress:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1088,7 +1088,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_unit_tests:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1179,7 +1179,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j11_jvm_dtests:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1271,7 +1271,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j11_build:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1352,7 +1352,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j11_cqlsh-dtests-py2-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1373,7 +1373,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1430,7 +1430,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j8_dtests-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1451,7 +1451,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1488,7 +1488,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j11_cqlsh-dtests-py38-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1509,7 +1509,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1566,7 +1566,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   j8_jvm_dtests:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1657,7 +1657,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_build:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1737,7 +1737,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_cqlsh-dtests-py3-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1758,7 +1758,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1814,7 +1814,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_cqlsh-dtests-py38-with-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1835,7 +1835,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1891,7 +1891,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   utests_long:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1936,7 +1936,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   utests_fqltool:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -1981,7 +1981,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j11_dtests-no-vnodes:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -2024,7 +2024,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -2062,7 +2062,7 @@ jobs:
     - CASSANDRA_USE_JDK11: true
   utests_compression:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -2153,7 +2153,7 @@ jobs:
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
   j8_dtest_jars_build:
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
