--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -277,7 +277,7 @@ executors:
         type: string
         default: medium
     docker:
-      - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200406
+      - image: nastra/cassandra-testing-ubuntu1910-java11-w-dependencies:20200603
     resource_class: << parameters.exec_resource_class >>
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -292,7 +292,7 @@ executors:
         type: string
         default: medium
     docker:
-    - image: nastra/cassandra-testing-ubuntu1910-java11:20200406
+    - image: nastra/cassandra-testing-ubuntu1910-java11:20200603
     resource_class: << parameters.exec_resource_class >>
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
@@ -914,7 +914,7 @@ commands:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env<<parameters.python_version>>/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
 
