UNRELATED: Allow different pip-source-install repos in requirements.txt

--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -914,7 +914,7 @@ commands:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env<<parameters.python_version>>/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
 
