--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -283,7 +283,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -360,7 +360,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -438,7 +438,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -516,7 +516,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -594,7 +594,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -671,7 +671,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -748,7 +748,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -848,7 +848,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -907,7 +907,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -965,7 +965,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1373,7 +1373,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1451,7 +1451,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1509,7 +1509,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1758,7 +1758,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -1835,7 +1835,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.8/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
@@ -2024,7 +2024,7 @@ jobs:
           # rebuild the docker image! (it automatically pulls the latest requirements.txt on build)
           source ~/env3.6/bin/activate
           export PATH=$JAVA_HOME/bin:$PATH
-          pip3 install --upgrade -r ~/cassandra-dtest/requirements.txt
+          pip3 install --exists-action w --upgrade -r ~/cassandra-dtest/requirements.txt
           pip3 uninstall -y cqlsh
           pip3 freeze
     - run:
