Force better partitioning by splitting up long running test classes

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@
 test.runners = 4
 withDistribution = true
 systemProp.gradle.enterprise.url=https://ge-experiment.grdev.net/
+gradle.internal.testdistribution.writeTraceFile=true
